force-app/main/default/objects/Correspondence__c/Correspondence__c.object-meta.xml
<CustomObject>
    <label>Correspondence</label>
    <nameField>
        <displayFormat>COR-{000000}</displayFormat>
        <label>Correspondence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Correspondence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>