force-app/main/default/objects/Correspondence__c/fields/Access_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Access_Last_Name__c</fullName>
    <label>Access Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>