force-app/main/default/objects/Correspondence__c/fields/Access_Member__c.field-meta.xml
<CustomField>
    <fullName>Access_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Access Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Correspondence (Access Member)</relationshipLabel>
    <relationshipName>Correspondence4</relationshipName>
    <type>Lookup</type>
</CustomField>