force-app/main/default/objects/Correspondence__c/fields/Access_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Access_Salutation__c</fullName>
    <label>Access Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>