force-app/main/default/objects/Correspondence__c/fields/Age_Concession__c.field-meta.xml
<CustomField>
    <fullName>Age_Concession__c</fullName>
    <formula>Member__r.Age_Concession__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Concession</label>
    <type>Checkbox</type>
</CustomField>