force-app/main/default/objects/Correspondence__c/fields/Age_Concession_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Age_Concession_Secondary__c</fullName>
    <formula>IF( Secondary_Member__r.Age_Concession__c  = true,&quot;Age Concession&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Concession Secondary</label>
    <type>Text</type>
</CustomField>