force-app/main/default/objects/Correspondence__c/fields/Amendment_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Amendment/Renewal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Correspondence</relationshipLabel>
    <relationshipName>Correspondence</relationshipName>
    <type>Lookup</type>
</CustomField>