force-app/main/default/objects/Correspondence__c/fields/Associate_Member__c.field-meta.xml
<CustomField>
    <fullName>Associate_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associate Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Correspondence (Associate Member)</relationshipLabel>
    <relationshipName>Correspondence1</relationshipName>
    <type>Lookup</type>
</CustomField>