force-app/main/default/objects/Correspondence__c/fields/Associate_Member_Fee__c.field-meta.xml
<CustomField>
    <fullName>Associate_Member_Fee__c</fullName>
    <label>Associate Member Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>