force-app/main/default/objects/Correspondence__c/fields/Associate_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Associate_Salutation__c</fullName>
    <formula>TEXT(Associate_Member__r.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associate Salutation</label>
    <type>Text</type>
</CustomField>