force-app/main/default/objects/Correspondence__c/fields/Associates_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Associates_First_Name__c</fullName>
    <formula>Associate_Member__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associates First Name</label>
    <type>Text</type>
</CustomField>