force-app/main/default/objects/Correspondence__c/fields/Associates_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Associates_Last_Name__c</fullName>
    <formula>Associate_Member__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associates Last Name</label>
    <type>Text</type>
</CustomField>