force-app/main/default/objects/Correspondence__c/fields/Camping_Unit__c.field-meta.xml
<CustomField>
    <fullName>Camping_Unit__c</fullName>
    <formula>TEXT (Membership__r.Camping_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Camping Unit</label>
    <type>Text</type>
</CustomField>