force-app/main/default/objects/Correspondence__c/fields/Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation</label>
    <referenceTo>Cancellation__c</referenceTo>
    <relationshipLabel>Correspondence</relationshipLabel>
    <relationshipName>Correspondence</relationshipName>
    <type>Lookup</type>
</CustomField>