force-app/main/default/objects/Correspondence__c/fields/Contact_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Type_Name__c</fullName>
    <formula>Lead_Member__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Record Type Name</label>
    <type>Text</type>
</CustomField>