force-app/main/default/objects/Correspondence__c/fields/Correspondence_date__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_date__c</fullName>
    <label>Correspondence Date</label>
    <type>Date</type>
</CustomField>