force-app/main/default/objects/Correspondence__c/fields/Correspondence_Type__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Type__c</fullName>
    <label>Correspondence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>New Associate Member</fullName>
            </value>
            <value>
                <fullName>Member Get Member</fullName>
            </value>
            <value>
                <fullName>Replacement Renewal</fullName>
            </value>
            <value>
                <fullName>New Second Member</fullName>
            </value>
            <value>
                <fullName>Replacement Card</fullName>
            </value>
            <value>
                <fullName>Monthly Magazine</fullName>
            </value>
            <value>
                <fullName>Auddis Letter</fullName>
            </value>
            <value>
                <fullName>New Access Member</fullName>
            </value>
            <value>
                <fullName>New Member DD</fullName>
            </value>
            <value>
                <fullName>Amend DD</fullName>
            </value>
            <value>
                <fullName>Renew DD</fullName>
            </value>
            <value>
                <fullName>Replacement AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>