force-app/main/default/objects/Correspondence__c/fields/Correspondence_Type_MailingHouse__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Type_MailingHouse__c</fullName>
    <label>Correspondence Type (MH)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replacement Renewal</fullName>
            </value>
            <value>
                <fullName>New Second Member</fullName>
            </value>
            <value>
                <fullName>Replacement Card</fullName>
            </value>
            <value>
                <fullName>New Access Member</fullName>
            </value>
            <value>
                <fullName>Replacement AM</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
                <isActive>false</isActive>
                <label>Cancellation</label>
            </value>
            <value>
                <fullName>Member Get Member</fullName>
                <isActive>false</isActive>
                <label>Member Get Member</label>
            </value>
            <value>
                <fullName>Monthly Magazine</fullName>
                <isActive>false</isActive>
                <label>Monthly Magazine</label>
            </value>
            <value>
                <fullName>New Associate Member</fullName>
                <isActive>false</isActive>
                <label>New Associate Member</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
                <isActive>false</isActive>
                <label>Renewal</label>
            </value>
            <value>
                <fullName>Site Directory</fullName>
                <isActive>false</isActive>
                <label>Site Directory</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>