force-app/main/default/objects/Correspondence__c/fields/Date_Joined__c.field-meta.xml
<CustomField>
    <fullName>Date_Joined__c</fullName>
    <formula>Membership__r.Date_Joined__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Joined</label>
    <type>Date</type>
</CustomField>