force-app/main/default/objects/Correspondence__c/fields/Date_Monies_to_be_Taken__c.field-meta.xml
<CustomField>
    <fullName>Date_Monies_to_be_Taken__c</fullName>
    <label>Date Monies to be Taken</label>
    <type>Date</type>
</CustomField>