force-app/main/default/objects/Correspondence__c/fields/Date_Processed__c.field-meta.xml
<CustomField>
    <fullName>Date_Processed__c</fullName>
    <description>This is the date and time the entry was processed by Salesforce and added to the CSV export file</description>
    <label>Date Processed</label>
    <type>DateTime</type>
</CustomField>