force-app/main/default/objects/Correspondence__c/fields/Description_of_Item_Requested__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Item_Requested__c</fullName>
    <label>Description of Item Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>