force-app/main/default/objects/Correspondence__c/fields/District_Association__c.field-meta.xml
<CustomField>
    <fullName>District_Association__c</fullName>
    <formula>Lead_Member__r.District_Association__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District Association</label>
    <type>Text</type>
</CustomField>