force-app/main/default/objects/Correspondence__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>TEXT (Member__r.Salutation ) + &quot;. &quot; +  Member__r.FirstName + &quot; &quot; +  Member__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>