force-app/main/default/objects/Correspondence__c/fields/Gift_Code__c.field-meta.xml
<CustomField>
    <fullName>Gift_Code__c</fullName>
    <label>Gift Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>