force-app/main/default/objects/Correspondence__c/fields/Lead_Member__c.field-meta.xml
<CustomField>
    <fullName>Lead_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Correspondence (Lead Member)</relationshipLabel>
    <relationshipName>Correspondence3</relationshipName>
    <type>Lookup</type>
</CustomField>