force-app/main/default/objects/Correspondence__c/fields/Lead_Member_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Member_First_Name__c</fullName>
    <label>Lead Member First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>