force-app/main/default/objects/Correspondence__c/fields/Lead_Member_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Lead_Member_Salutation__c</fullName>
    <label>Lead Member Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>