force-app/main/default/objects/Correspondence__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Correspondence</relationshipLabel>
    <relationshipName>Correspondence</relationshipName>
    <type>Lookup</type>
</CustomField>