force-app/main/default/objects/Correspondence__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Correspondence</relationshipLabel>
    <relationshipName>Correspondence</relationshipName>
    <type>Lookup</type>
</CustomField>