force-app/main/default/objects/Correspondence__c/fields/Membership_Code__c.field-meta.xml
<CustomField>
    <fullName>Membership_Code__c</fullName>
    <formula>IF( Renewal_Product_Code__c &lt;&gt; &apos;&apos; &amp;&amp;  TEXT(Correspondence_Type__c) = &apos;Renewal&apos;,
 Renewal_Product_Code__c,
Membership__r.Membership_Code__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Code</label>
    <type>Text</type>
</CustomField>