force-app/main/default/objects/Correspondence__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <description>Picks up the Hybrid Membership Number (Hybrid_Membership_Number__c) from the Account object.</description>
    <formula>Membership__r.Hybrid_Membership_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Picks up the Hybrid Membership Number from the Membership record</inlineHelpText>
    <label>Membership Number</label>
    <type>Text</type>
</CustomField>