force-app/main/default/objects/Correspondence__c/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <formula>TEXT (Membership__r.Membership_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Status</label>
    <type>Text</type>
</CustomField>