force-app/main/default/objects/Correspondence__c/fields/Membership_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Membership_Subscription_Fee__c</fullName>
    <label>Membership Subscription Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>