force-app/main/default/objects/Correspondence__c/fields/MGM_Country__c.field-meta.xml
<CustomField>
    <fullName>MGM_Country__c</fullName>
    <label>MGM Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>