force-app/main/default/objects/Correspondence__c/fields/MGM_County__c.field-meta.xml
<CustomField>
    <fullName>MGM_County__c</fullName>
    <label>MGM County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>