force-app/main/default/objects/Correspondence__c/fields/MGM_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>MGM_Organisation_Name__c</fullName>
    <label>MGM Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>