force-app/main/default/objects/Correspondence__c/fields/MGM_Postcode__c.field-meta.xml
<CustomField>
    <fullName>MGM_Postcode__c</fullName>
    <label>MGM Postcode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>