force-app/main/default/objects/Correspondence__c/fields/MGM_Street__c.field-meta.xml
<CustomField>
    <fullName>MGM_Street__c</fullName>
    <label>MGM Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>