force-app/main/default/objects/Correspondence__c/fields/MGM_Town_City__c.field-meta.xml
<CustomField>
    <fullName>MGM_Town_City__c</fullName>
    <label>MGM Town/City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>