force-app/main/default/objects/Correspondence__c/fields/Old_DA__c.field-meta.xml
<CustomField>
    <fullName>Old_DA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old DA</label>
    <referenceTo>Association__c</referenceTo>
    <relationshipLabel>Correspondence</relationshipLabel>
    <relationshipName>Correspondence</relationshipName>
    <type>Lookup</type>
</CustomField>