force-app/main/default/objects/Correspondence__c/fields/Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Name__c</fullName>
    <formula>Membership__r.Organisation_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation Name</label>
    <type>Text</type>
</CustomField>