force-app/main/default/objects/Correspondence__c/fields/Organisation_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Name_c__c</fullName>
    <label>Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>