force-app/main/default/objects/Correspondence__c/fields/Re_issue__c.field-meta.xml
<CustomField>
    <fullName>Re_issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-issue</label>
    <type>Checkbox</type>
</CustomField>