force-app/main/default/objects/Correspondence__c/fields/Re_issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_issue_Date__c</fullName>
    <label>Re-issue Date</label>
    <type>DateTime</type>
</CustomField>