force-app/main/default/objects/Correspondence__c/fields/Renewal_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Product_Code__c</fullName>
    <label>Renewal Product Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>