force-app/main/default/objects/Correspondence__c/fields/Replacement_renewal__c.field-meta.xml
<CustomField>
    <fullName>Replacement_renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Replacement Renewal (Opportunity)</relationshipLabel>
    <relationshipName>Correspondence1</relationshipName>
    <type>Lookup</type>
</CustomField>