force-app/main/default/objects/Correspondence__c/fields/Second_Member_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Second_Member_First_Name__c</fullName>
    <label>Second Member First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>