force-app/main/default/objects/Correspondence__c/fields/Second_Member_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Second_Member_Salutation__c</fullName>
    <label>Second Member Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>