force-app/main/default/objects/Correspondence__c/fields/Secondary_Member__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Correspondence (Secondary Member)</relationshipLabel>
    <relationshipName>Correspondence2</relationshipName>
    <type>Lookup</type>
</CustomField>