force-app/main/default/objects/Correspondence__c/fields/Sections__c.field-meta.xml
<CustomField>
    <fullName>Sections__c</fullName>
    <label>Sections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>