force-app/main/default/objects/Correspondence__c/fields/Sections_fee__c.field-meta.xml
<CustomField>
    <fullName>Sections_fee__c</fullName>
    <label>Sections fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>