force-app/main/default/objects/Correspondence__c/fields/Tenure_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Secondary__c</fullName>
    <label>Tenure Secondary</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>