force-app/main/default/objects/Correspondence__c/fields/Town_City__c.field-meta.xml
<CustomField>
    <fullName>Town_City__c</fullName>
    <formula>Membership__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Town/City</label>
    <type>Text</type>
</CustomField>