force-app/main/default/objects/Correspondence__c/fields/Value_of_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Renewal__c</fullName>
    <formula>Membership_Subscription_Fee__c + Associate_Member_Fee__c + Sections_fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value of Renewal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>