force-app/main/default/objects/Correspondence__c/fields/Voucher_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Expiry_Date__c</fullName>
    <label>Voucher Expiry Date</label>
    <type>Date</type>
</CustomField>