force-app/main/default/objects/Correspondence__c/fields/Youth_Test_Passed_Date__c.field-meta.xml
<CustomField>
    <fullName>Youth_Test_Passed_Date__c</fullName>
    <label>Youth Test Passed Date</label>
    <type>Date</type>
</CustomField>