force-app/main/default/objects/Correspondence__c/listViews/All_Auddis.listView-meta.xml
<ListView>
    <fullName>All_Auddis</fullName>
    <columns>NAME</columns>
    <columns>Correspondence_Type__c</columns>
    <columns>Correspondence_date__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Membership__c</columns>
    <columns>Town_City__c</columns>
    <columns>Postcode__c</columns>
    <columns>Membership_Status__c</columns>
    <columns>Value_of_Renewal__c</columns>
    <columns>Renewal_Date__c</columns>
    <columns>Total_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Correspondence_Type__c</field>
        <operation>equals</operation>
        <value>Auddis Letter</value>
    </filters>
    <label>Auddis Letters</label>
</ListView>