force-app/main/default/objects/Correspondence__c/listViews/All_Cancellations.listView-meta.xml
<ListView>
    <fullName>All_Cancellations</fullName>
    <columns>NAME</columns>
    <columns>Correspondence_Type__c</columns>
    <columns>Correspondence_date__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Membership__c</columns>
    <columns>Town_City__c</columns>
    <columns>Postcode__c</columns>
    <columns>Membership_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Correspondence_Type__c</field>
        <operation>equals</operation>
        <value>Cancellation</value>
    </filters>
    <label>Cancellations</label>
</ListView>