force-app/main/default/objects/Correspondence__c/listViews/All_Replacement_Renewals.listView-meta.xml
<ListView>
    <fullName>All_Replacement_Renewals</fullName>
    <columns>NAME</columns>
    <columns>Correspondence_Type__c</columns>
    <columns>Correspondence_date__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Membership__c</columns>
    <columns>Membership_Status__c</columns>
    <columns>Renewal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Correspondence_Type__c</field>
        <operation>equals</operation>
        <value>Replacement Renewal</value>
    </filters>
    <label>Replacement Renewals</label>
</ListView>