force-app/main/default/objects/Correspondence__c/listViews/Replacement_Cards.listView-meta.xml
<ListView>
    <fullName>Replacement_Cards</fullName>
    <columns>NAME</columns>
    <columns>Correspondence_Type__c</columns>
    <columns>Correspondence_date__c</columns>
    <columns>Membership_Number__c</columns>
    <columns>Membership__c</columns>
    <columns>Membership_Status__c</columns>
    <columns>Renewal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Correspondence_Type__c</field>
        <operation>equals</operation>
        <value>Replacement Card</value>
    </filters>
    <label>Replacement Cards</label>
</ListView>